@@ -24,6 +24,8 @@ otherwise noted.
     Folke Brobak.
   * Comments in the C parser ar enow normalized before being combined.
     RubyForge patch #28646 by Sven Herzberg.
+  * RDoc::Parser::C no longer requires a comment and finds more method bodies.
+    RubyForge patch #28643 by Sven Herzberg.
 
 === 3.0.1 / 2010-12-19
 
